# quicksort

./: LICENSE  README.md  quicksort.cabal
src/: Main.hs  QuickSort.hs
test/: Main.hs
