name:                quicksort
version:             0.1.0
synopsis:            a command line utility for sorting lists
description:         a command line utility for sorting lists
homepage:            n/a
license:             MIT
license-file:        LICENSE
author:              Traap
maintainer:          gary.a.howard@mac.com
-- copyright:
category:            Data
build-type:          Simple
cabal-version:       >=1.8

library
    hs-source-dirs: src
    build-depends: base
    ghc-options: -Wall -Werror
    exposed-modules:
        QuickSort

test-suite testqs
    type: exitcode-stdio-1.0
    cpp-options: -DFULLTEST=1
    hs-source-dirs: test
    build-depends: base, quicksort, test-framework, QuickCheck, test-framework-quickcheck2, random
    ghc-options: -Wall -Werror
    main-is: Main.hs

executable quicksort
    hs-source-dirs: src
    main-is : Main.hs
    build-depends : base, quicksort
